force-app/main/default/objects/BMCServiceDesk__SRM_FulfillmentMappings__c/BMCServiceDesk__SRM_FulfillmentMappings__c.object-meta.xml
<CustomObject>
    <description>Stores the mapping between an input question and the field of a selected process. The response for the input question is stored in the mapped field of the process.</description>
    <label>Fulfillment Mapping</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fulfillment Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>