force-app/main/default/objects/BMCServiceDesk__SRM_FulfillmentMappings__c/fields/BMCServiceDesk__FKProcessTemplate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKProcessTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Template</label>
    <referenceTo>BMCServiceDesk__SRM_ProcessTemplate__c</referenceTo>
    <relationshipLabel>Fulfillment Mappings</relationshipLabel>
    <relationshipName>Fulfillment_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>