force-app/main/default/objects/BMCServiceDesk__SRM_FulfillmentMappings__c/fields/BMCServiceDesk__FKTemplate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <referenceTo>BMCServiceDesk__SYSTemplate__c</referenceTo>
    <relationshipLabel>Fulfillment Mappings</relationshipLabel>
    <relationshipName>Fulfillment_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>