force-app/main/default/objects/BMCServiceDesk__SRM_FulfillmentMappings__c/fields/BMCServiceDesk__ProcessVariable__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ProcessVariable__c</fullName>
    <label>Process variable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>